wikijs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
spec:
  selector:
    app: wikijs
  type: ClusterIP
  ports:
  - name: wikijs
    protocol: TCP
    port: 80
    targetPort: 80
